--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction --dev
 
-script: vendor/bin/phpspec run
+script: 
+	- vendor/bin/phpunit
+	- vendor/bin/phpspec run
