--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "jiro/support": "dev-develop"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
