--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "jiro/support": "dev-develop"
+        "jiro/support": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
