--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "laracasts/testdummy": "~2.0",
-        "laravel/laravel": "dev-develop"
+        "laravel/laravel": "dev-master"
     },    
     "autoload": {
         "psr-4": {
