--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "jiro/support": "dev-master"
+        "jiro/support": "dev-master",
+        "jiro/property": "dev-master",
+        "jiro/variation": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "laracasts/testdummy": "~2.0",
-        "laravel/laravel": "dev-master"
+        "laracasts/testdummy": "~2.0"
     },    
     "autoload": {
         "psr-4": {
