--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "require": {
         "php": ">=5.4.0",
         "jiro/support": "dev-master",
-        "jiro/property": "dev-master",
-        "jiro/variation": "dev-master"
+        "jiro/property": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
