--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
+        "laravel/laravel": "~5.0",
         "laracasts/testdummy": "~2.0"
     },    
     "autoload": {
