--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,17 @@ php:
   - 5.5
   - 5.6
   - hhvm
+  - hhvm-nightly
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    - php: hhvm-nightly
 
 before_script:
-  - travis_retry composer self-update
-  - travis_retry composer install --prefer-source --no-interaction --dev
+  - composer self-update
+  - composer install --dev --no-interaction
 
-script: 
-	- vendor/bin/phpunit
-	- vendor/bin/phpspec run
+script:
+  - vendor/bin/phpunit
+  - vendor/bib/phpspec run
