--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
 
 before_script:
   - composer self-update
-  - composer install --dev --no-interaction
+  - composer install --no-interaction
 
 script:
   - vendor/bin/phpunit
