--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
     - php: hhvm-nightly
 
 before_script:
-  - travis_retry self-update
+  - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
 
 script:
