--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,38 @@
 {
-    "name": "jiro/product",
-    "description": "Product catalog system with support for product options, variants and properties.",
-    "authors": [
-        {
-            "name": "Andrew McLagan",
-            "email": "andrewmclagan@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "jiro/support": "dev-master",
-        "jiro/property": "dev-master",
-        "jiro/variation": "dev-master"
-    },
+	"name": "jiro/product",
+	"description": "Jiro Product",
+	"authors": [
+		{
+			"name": "Andrew McLagan",
+			"email": "andrewmclagan@gmail.com"
+		}
+	],
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "http://packages.cartalyst.com"
+		}
+	],
+	"require": {
+		"php": ">=5.4.0",
+		"illuminate/support": "4.2.*",
+		"jiro/support": "0.1.*"
+	},
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpspec/phpspec": "~2.1",
+        "phpunit/phpunit": "4.5.*"
         "laravel/laravel": "~5.0",
-        "laracasts/testdummy": "~2.0"
-    },    
-    "autoload": {
-        "psr-4": {
-            "Jiro\\Product\\": "src/"
-        }      
-    },
-    "autoload-dev": {      
-        "psr-4": { 
-            "Jiro\\Product\\spec\\": "spec/",
-            "Jiro\\Product\\Tests\\": "tests/"
-        }
-    },      
-    "minimum-stability": "dev"
+        "laracasts/testdummy": "~2.0"        
+    },  	
+	"autoload": {
+		"classmap": [
+			"database/migrations",
+			"database/seeds"
+		],
+		"psr-4": {
+			"Jiro\\Product\\": "src/"
+		}
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
