--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"require": {
 		"php": ">=5.4.0",
 		"illuminate/support": "4.2.*",
-		"jiro/support": "0.1.*"
+		"jiro/support": "dev-master"
 	},
     "require-dev": {
         "phpspec/phpspec": "~2.1",
